--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A canvas library used by various Divblox tools like the Divblox Data Modeler",
   "main": "dx-canvas.js",
   "directories": {
-    "test": "tests"
+    "test": "examples"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
