--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "Divblox",
     "canvas"
   ],
-  "author": "Johan Griesel, johan@stratusolve.com (Stratusolve (Pty)",
+  "author": "Johan Griesel, johan@divblox.com - Divblox (Pty) Ltd",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/divbloxjs/dx-canvas/issues"
