This commit introduces the use of temporary objects to the canvas
Why temporary objects? As the name suggests, they are not meant to stay on the canvas for long and are used for quick interacting with the canvas. As a result we could easily add features like dynamically linking different non-temporary objects, and it became easy to add an icon related to the non-temporary object that allows you to dynamically remove objects from the canvas. But the changes were not only done on the front end, as the changes have to be carefully processed and managed in the background to update the connections information on all non-temporary objects and manage the display of temporary objects. Hope you enjoy these new features

--- a/package.json
+++ b/package.json
@@ -1,52 +1,26 @@
 {
-  "_from": "github:divbloxjs/dx-canvas",
-  "_id": "dx-canvas@1.0.0",
-  "_inBundle": false,
-  "_integrity": "",
-  "_location": "/dx-canvas",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "git",
-    "raw": "github:divbloxjs/dx-canvas",
-    "rawSpec": "github:divbloxjs/dx-canvas",
-    "saveSpec": "github:divbloxjs/dx-canvas",
-    "fetchSpec": null,
-    "gitCommittish": null
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
-  ],
-  "_resolved": "github:divbloxjs/dx-canvas#c4a179a8232e349aee81a3b6b36a035f2fdaabc0",
-  "_spec": "github:divbloxjs/dx-canvas",
-  "_where": "/home/john-louis/Repositories/Ideco-Project/project/assets/js/node_modules",
-  "author": {
-    "name": "Johan Griesel, johan@divblox.com - Divblox",
-    "url": "Pty"
-  },
-  "bugs": {
-    "url": "https://github.com/divbloxjs/dx-canvas/issues"
-  },
-  "bundleDependencies": false,
-  "deprecated": false,
+  "name": "dx-canvas",
+  "version": "1.0.0",
   "description": "A canvas library used by various Divblox tools like the Divblox Data Modeler",
+  "main": "dx-canvas.js",
   "directories": {
     "test": "examples"
-  },
-  "homepage": "https://github.com/divbloxjs/dx-canvas#readme",
-  "keywords": [
-    "Divblox",
-    "canvas"
-  ],
-  "license": "MIT",
-  "main": "dx-canvas.js",
-  "name": "dx-canvas",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/divbloxjs/dx-canvas.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.0.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/divbloxjs/dx-canvas.git"
+  },
+  "keywords": [
+    "Divblox",
+    "canvas"
+  ],
+  "author": "Johan Griesel, johan@divblox.com - Divblox (Pty) Ltd",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/divbloxjs/dx-canvas/issues"
+  },
+  "homepage": "https://github.com/divbloxjs/dx-canvas#readme"
 }
